# RIT-ADS

./: README.md
Code/Calibration Scripts/: calibrate.py  get_parameters.py
Code/Calibration Scripts/MultiCamSaveToAvi/: Makefile  MultiCamSaveToAvi.cpp  resource.h
Code/ROS WorkSpace Files/synch_data/: CMakeLists.txt  package.xml
Code/ROS WorkSpace Files/synch_data/src/: main.cpp
Media/stereo_pic/: Stereo_Generator_and_Calibrator.py
